care/force-app/main/default/objects/Regulation__c/Regulation__c.object-meta.xml
<CustomObject>
    <label>Regulation</label>
    <nameField>
        <label>Regulation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regulations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>