care/force-app/main/default/objects/Regulation__c/fields/AAA_Links__c.field-meta.xml
<CustomField>
    <fullName>AAA_Links__c</fullName>
    <label>AAA Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>