care/force-app/main/default/objects/Regulation__c/fields/Accreditted_Vet_Benefits_Attor_Listing__c.field-meta.xml
<CustomField>
    <fullName>Accreditted_Vet_Benefits_Attor_Listing__c</fullName>
    <inlineHelpText>Accreditted Veterans Benefits Attorneys Listing</inlineHelpText>
    <label>Accreditted Vet. Benefits Attor. Listing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>