care/force-app/main/default/objects/Regulation__c/fields/Accreditted_Veterans_Benefits_Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Accreditted_Veterans_Benefits_Attorneys__c</fullName>
    <label>Accreditted Veterans Benefits Attorneys</label>
    <length>255</length>
    <type>Text</type>
</CustomField>