care/force-app/main/default/objects/Regulation__c/fields/Additional_License_Verification_Link_s__c.field-meta.xml
<CustomField>
    <fullName>Additional_License_Verification_Link_s__c</fullName>
    <label>Additional License Verification Link(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>