care/force-app/main/default/objects/Regulation__c/fields/Additional_Listing_of_ILC_Links__c.field-meta.xml
<CustomField>
    <fullName>Additional_Listing_of_ILC_Links__c</fullName>
    <label>Additional Listing of ILC Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>