care/force-app/main/default/objects/Regulation__c/fields/Additional_Listing_of_Licensed_NCC_Link__c.field-meta.xml
<CustomField>
    <fullName>Additional_Listing_of_Licensed_NCC_Link__c</fullName>
    <label>Additional Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>