care/force-app/main/default/objects/Regulation__c/fields/Additional_Notes_ALC__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_ALC__c</fullName>
    <inlineHelpText>State-Specific Information on Assisted Livings</inlineHelpText>
    <label>Additional Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>