care/force-app/main/default/objects/Regulation__c/fields/Additional_Notes_e_g_trends_RH__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_e_g_trends_RH__c</fullName>
    <label>Additional Notes (e.g. trends)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>