care/force-app/main/default/objects/Regulation__c/fields/Additional_Notes_ELA__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes_ELA__c</fullName>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>