care/force-app/main/default/objects/Regulation__c/fields/Additional_Services_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Additional_Services_Benefits__c</fullName>
    <label>Additional Services/Benefits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>