care/force-app/main/default/objects/Regulation__c/fields/Additional_State_Department_Info_Links__c.field-meta.xml
<CustomField>
    <fullName>Additional_State_Department_Info_Links__c</fullName>
    <label>Additional State Department Info &amp; Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>