care/force-app/main/default/objects/Regulation__c/fields/ADRC_Info__c.field-meta.xml
<CustomField>
    <fullName>ADRC_Info__c</fullName>
    <inlineHelpText>Aging &amp; Disability Resource Consortium (ADRC) Info</inlineHelpText>
    <label>ADRC Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>