care/force-app/main/default/objects/Regulation__c/fields/ADRC_Links__c.field-meta.xml
<CustomField>
    <fullName>ADRC_Links__c</fullName>
    <label>ADRC Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>