care/force-app/main/default/objects/Regulation__c/fields/Affordable_Housing_Info__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_Info__c</fullName>
    <label>Affordable Housing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>