care/force-app/main/default/objects/Regulation__c/fields/Affordable_Housing_Link__c.field-meta.xml
<CustomField>
    <fullName>Affordable_Housing_Link__c</fullName>
    <label>Affordable Housing Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>