care/force-app/main/default/objects/Regulation__c/fields/Agencies_Allowed_to_have_1099_Caregivers__c.field-meta.xml
<CustomField>
    <fullName>Agencies_Allowed_to_have_1099_Caregivers__c</fullName>
    <label>Agencies Allowed to have 1099 Caregivers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>