care/force-app/main/default/objects/Regulation__c/fields/Aging_Services_Access_Point_ASAP_Info__c.field-meta.xml
<CustomField>
    <fullName>Aging_Services_Access_Point_ASAP_Info__c</fullName>
    <label>Aging Services Access Point (ASAP) Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>