care/force-app/main/default/objects/Regulation__c/fields/Area_Agency_on_Aging_AAA_Info__c.field-meta.xml
<CustomField>
    <fullName>Area_Agency_on_Aging_AAA_Info__c</fullName>
    <label>Area Agency on Aging (AAA) Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>