care/force-app/main/default/objects/Regulation__c/fields/ASAP_Care_Management_Services__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Care_Management_Services__c</fullName>
    <label>ASAP Care Management Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>