care/force-app/main/default/objects/Regulation__c/fields/ASAP_Care_Management_Services_Link_s__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Care_Management_Services_Link_s__c</fullName>
    <label>ASAP Care Management Services Link(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>