care/force-app/main/default/objects/Regulation__c/fields/ASAP_Links__c.field-meta.xml
<CustomField>
    <fullName>ASAP_Links__c</fullName>
    <label>ASAP Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>