care/force-app/main/default/objects/Regulation__c/fields/Assisted_Living_Licensing_Required__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Living_Licensing_Required__c</fullName>
    <label>Assisted Living Licensing Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>