care/force-app/main/default/objects/Regulation__c/fields/Assisted_Living_State_Association_s__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Living_State_Association_s__c</fullName>
    <label>Assisted Living State Association(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>