care/force-app/main/default/objects/Regulation__c/fields/Background_Check_Information__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Information__c</fullName>
    <inlineHelpText>Background Check Information (what does it include)</inlineHelpText>
    <label>Background Check Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>