care/force-app/main/default/objects/Regulation__c/fields/Comm_for_Deaf_and_Hard_of_Hearing_Info__c.field-meta.xml
<CustomField>
    <fullName>Comm_for_Deaf_and_Hard_of_Hearing_Info__c</fullName>
    <inlineHelpText>Commission for the Deaf and Hard of Hearing Info</inlineHelpText>
    <label>Comm. for Deaf and Hard of Hearing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>