care/force-app/main/default/objects/Regulation__c/fields/Comm_for_Deaf_and_Hard_of_Hearing_Link__c.field-meta.xml
<CustomField>
    <fullName>Comm_for_Deaf_and_Hard_of_Hearing_Link__c</fullName>
    <label>Comm. for Deaf and Hard of Hearing Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>