care/force-app/main/default/objects/Regulation__c/fields/Commission_for_the_Blind_Info__c.field-meta.xml
<CustomField>
    <fullName>Commission_for_the_Blind_Info__c</fullName>
    <label>Commission for the Blind Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>