care/force-app/main/default/objects/Regulation__c/fields/Commission_for_the_Blind_Link__c.field-meta.xml
<CustomField>
    <fullName>Commission_for_the_Blind_Link__c</fullName>
    <label>Commission for the Blind Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>