care/force-app/main/default/objects/Regulation__c/fields/CR_TS_Certified_State_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>CR_TS_Certified_State_Search_Link__c</fullName>
    <label>CR&amp;TS Certified State Search Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>