care/force-app/main/default/objects/Regulation__c/fields/Dep_of_Health_Human_Services_Link__c.field-meta.xml
<CustomField>
    <fullName>Dep_of_Health_Human_Services_Link__c</fullName>
    <label>Dept. of Health &amp; Human Services Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>