care/force-app/main/default/objects/Regulation__c/fields/Department_of_Affordable_Housing_Info__c.field-meta.xml
<CustomField>
    <fullName>Department_of_Affordable_Housing_Info__c</fullName>
    <label>Department of Affordable Housing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>