care/force-app/main/default/objects/Regulation__c/fields/Department_of_Public_Health_Info__c.field-meta.xml
<CustomField>
    <fullName>Department_of_Public_Health_Info__c</fullName>
    <label>Department of Public Health Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>