care/force-app/main/default/objects/Regulation__c/fields/Department_of_Veteran_s_Services_Info__c.field-meta.xml
<CustomField>
    <fullName>Department_of_Veteran_s_Services_Info__c</fullName>
    <label>Department of Veteran&apos;s Services Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>