care/force-app/main/default/objects/Regulation__c/fields/Dept_of_Developmental_Disabilities_Info__c.field-meta.xml
<CustomField>
    <fullName>Dept_of_Developmental_Disabilities_Info__c</fullName>
    <inlineHelpText>Department of Developmental Disabilities Info.</inlineHelpText>
    <label>Dept. of Developmental Disabilities Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>