care/force-app/main/default/objects/Regulation__c/fields/Dept_of_Developmental_Disabilities_Link__c.field-meta.xml
<CustomField>
    <fullName>Dept_of_Developmental_Disabilities_Link__c</fullName>
    <inlineHelpText>Dept. of Developmental Disabilities Link.</inlineHelpText>
    <label>Dept. of Developmental Disabilities Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>