care/force-app/main/default/objects/Regulation__c/fields/Dept_of_Health_Human_Services_Info__c.field-meta.xml
<CustomField>
    <fullName>Dept_of_Health_Human_Services_Info__c</fullName>
    <label>Dept. of Health &amp; Human Services Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>