care/force-app/main/default/objects/Regulation__c/fields/Dept_of_Social_Services_TA_Info__c.field-meta.xml
<CustomField>
    <fullName>Dept_of_Social_Services_TA_Info__c</fullName>
    <inlineHelpText>Department of Social Services/Transitional Assistance Info.</inlineHelpText>
    <label>Dept. of Social Services/TA Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>