care/force-app/main/default/objects/Regulation__c/fields/Dept_of_Social_Services_TA_Link__c.field-meta.xml
<CustomField>
    <fullName>Dept_of_Social_Services_TA_Link__c</fullName>
    <inlineHelpText>Dept. of Social Services/TA Link.</inlineHelpText>
    <label>Dept. of Social Services/TA Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>