care/force-app/main/default/objects/Regulation__c/fields/Disciplinary_Actions_Verification_Link__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_Actions_Verification_Link__c</fullName>
    <label>Disciplinary Actions Verification Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>