care/force-app/main/default/objects/Regulation__c/fields/Eden_Alternative_Link__c.field-meta.xml
<CustomField>
    <fullName>Eden_Alternative_Link__c</fullName>
    <label>Eden Alternative Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>