care/force-app/main/default/objects/Regulation__c/fields/Eden_Alternative_Nursing_Care_Centers__c.field-meta.xml
<CustomField>
    <fullName>Eden_Alternative_Nursing_Care_Centers__c</fullName>
    <label>Eden Alternative Nursing Care Centers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>