care/force-app/main/default/objects/Regulation__c/fields/Eldercare_Locator_State_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>Eldercare_Locator_State_Search_Link__c</fullName>
    <label>Eldercare Locator State Search Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>