care/force-app/main/default/objects/Regulation__c/fields/Funding_Trends__c.field-meta.xml
<CustomField>
    <fullName>Funding_Trends__c</fullName>
    <inlineHelpText>(Contract Type A, B, C Models)</inlineHelpText>
    <label>Funding Trends</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>