care/force-app/main/default/objects/Regulation__c/fields/Green_House_Link__c.field-meta.xml
<CustomField>
    <fullName>Green_House_Link__c</fullName>
    <label>Green House Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>