care/force-app/main/default/objects/Regulation__c/fields/Green_House_Nursing_Care_Centers__c.field-meta.xml
<CustomField>
    <fullName>Green_House_Nursing_Care_Centers__c</fullName>
    <label>Green House Nursing Care Centers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>