care/force-app/main/default/objects/Regulation__c/fields/HHAs_License_Required__c.field-meta.xml
<CustomField>
    <fullName>HHAs_License_Required__c</fullName>
    <label>HHAs License Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>