care/force-app/main/default/objects/Regulation__c/fields/Home_Care_Agencies_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Agencies_License_Required__c</fullName>
    <inlineHelpText>Home Care Agencies Required to be Licensed.</inlineHelpText>
    <label>Home Care Agencies License Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>