care/force-app/main/default/objects/Regulation__c/fields/Home_Modification_Loan_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>Home_Modification_Loan_Program_Link__c</fullName>
    <inlineHelpText>State&apos;s Home Modification Loan Program Link</inlineHelpText>
    <label>Home Modification Loan Program Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>