care/force-app/main/default/objects/Regulation__c/fields/Inspection_Authority__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Authority__c</fullName>
    <label>Inspection Authority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>