care/force-app/main/default/objects/Regulation__c/fields/Inspection_Authority_AL_and_NCC__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Authority_AL_and_NCC__c</fullName>
    <inlineHelpText>Inspection Authority (Assisted Living and Nursing Care Center)</inlineHelpText>
    <label>Inspection Authority (AL and NCC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>