care/force-app/main/default/objects/Regulation__c/fields/Inspection_Authority_ALC__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Authority_ALC__c</fullName>
    <label>Inspection Authority ALC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>