care/force-app/main/default/objects/Regulation__c/fields/Inspection_Cycle_Frequency_ALC__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Cycle_Frequency_ALC__c</fullName>
    <label>Inspection Cycle/Frequency ALC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>