care/force-app/main/default/objects/Regulation__c/fields/Inspection_Entity__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Entity__c</fullName>
    <label>Inspection Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>