care/force-app/main/default/objects/Regulation__c/fields/Inspection_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Frequency__c</fullName>
    <label>Inspection Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>