care/force-app/main/default/objects/Regulation__c/fields/Inspection_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Survey_Link__c</fullName>
    <label>Inspection Survey Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>