care/force-app/main/default/objects/Regulation__c/fields/Legal_Help_for_Veterans_Resources_Links__c.field-meta.xml
<CustomField>
    <fullName>Legal_Help_for_Veterans_Resources_Links__c</fullName>
    <label>Legal Help for Veterans Resources Links</label>
    <length>255</length>
    <type>Text</type>
</CustomField>