care/force-app/main/default/objects/Regulation__c/fields/License_Mandated_in_State_ADH__c.field-meta.xml
<CustomField>
    <fullName>License_Mandated_in_State_ADH__c</fullName>
    <label>License Mandated in State ADH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>