care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_Adult_Day_Health__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_Adult_Day_Health__c</fullName>
    <label>Licensing Entity Adult Day Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>