care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_AL_and_NCC__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_AL_and_NCC__c</fullName>
    <inlineHelpText>Licensing Entity (Assisted Living and Nursing Care Center)</inlineHelpText>
    <label>Licensing Entity (AL and NCC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>