care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_Home_Modification_DME__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_Home_Modification_DME__c</fullName>
    <label>Licensing Entity Home Modification/DME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>