care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_NMHCA__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_NMHCA__c</fullName>
    <label>Licensing Entity NMHCA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>