care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_Nursing_Care_Centers__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_Nursing_Care_Centers__c</fullName>
    <label>Licensing Entity Nursing Care Centers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>