care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_RH__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_RH__c</fullName>
    <label>Licensing Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>