care/force-app/main/default/objects/Regulation__c/fields/Licensing_Entity_Senior_Move_Managers__c.field-meta.xml
<CustomField>
    <fullName>Licensing_Entity_Senior_Move_Managers__c</fullName>
    <label>Licensing Entity Senior Move Managers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>