care/force-app/main/default/objects/Regulation__c/fields/Listing_of_Contracted_Transport_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Listing_of_Contracted_Transport_Vendors__c</fullName>
    <inlineHelpText>Listing of Contracted Transportation Vendors</inlineHelpText>
    <label>Listing of Contracted Transport. Vendors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>