care/force-app/main/default/objects/Regulation__c/fields/Listing_of_Home_Mod_DME_Providers_Link__c.field-meta.xml
<CustomField>
    <fullName>Listing_of_Home_Mod_DME_Providers_Link__c</fullName>
    <inlineHelpText>State Listing of Home Modification/DME Providers Link</inlineHelpText>
    <label>Listing of Home Mod./DME Providers Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>