care/force-app/main/default/objects/Regulation__c/fields/Listing_of_Life_Plan_Communities_Link__c.field-meta.xml
<CustomField>
    <fullName>Listing_of_Life_Plan_Communities_Link__c</fullName>
    <label>Listing of Life Plan Communities Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>