care/force-app/main/default/objects/Regulation__c/fields/Local_Homemods_org_Resources_Link__c.field-meta.xml
<CustomField>
    <fullName>Local_Homemods_org_Resources_Link__c</fullName>
    <label>Local Homemods.org Resources Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>