care/force-app/main/default/objects/Regulation__c/fields/Local_Rebuilding_Together_Affiliate_Link__c.field-meta.xml
<CustomField>
    <fullName>Local_Rebuilding_Together_Affiliate_Link__c</fullName>
    <inlineHelpText>Local Rebuilding Together (Low-Income Assistance) Affiliate Link</inlineHelpText>
    <label>Local Rebuilding Together Affiliate Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>