care/force-app/main/default/objects/Regulation__c/fields/Managing_Agencies_of_Subsidy_Programs__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agencies_of_Subsidy_Programs__c</fullName>
    <label>Managing Agencies of Subsidy Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>