care/force-app/main/default/objects/Regulation__c/fields/Managing_Agency_Subsidized_HomeCareProgr__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agency_Subsidized_HomeCareProgr__c</fullName>
    <inlineHelpText>Managing Agency of Subsidized Home Care Programs (e.g. ASAPs)</inlineHelpText>
    <label>Managing Agency Subsidized HomeCareProgr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>