care/force-app/main/default/objects/Regulation__c/fields/Medicaid_Program_Info__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Program_Info__c</fullName>
    <label>Medicaid Program Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>