care/force-app/main/default/objects/Regulation__c/fields/Medicaid_Program_Link__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Program_Link__c</fullName>
    <label>Medicaid Program Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>