care/force-app/main/default/objects/Regulation__c/fields/Moveseniors_org_State_Search_Link__c.field-meta.xml
<CustomField>
    <fullName>Moveseniors_org_State_Search_Link__c</fullName>
    <label>Moveseniors.org State Search Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>