care/force-app/main/default/objects/Regulation__c/fields/Name_of_Medicaid_Program__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Medicaid_Program__c</fullName>
    <label>Name of Medicaid Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>