care/force-app/main/default/objects/Regulation__c/fields/Number_of_Communities_in_State__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Communities_in_State__c</fullName>
    <label>Number of Communities in State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>